# ergo-crowdfunding-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build_release.sh
src/: api_key.rs  campaign.rs  main.rs  wallet_reqs.rs
