[package]
name = "ergo_cf"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate        = "1.0.2"
handlebars          = "2.0.1"
serde               = "1.0.99"
serde_json          = "1.0.40"
docopt              = "1.1.0"
reqwest             = "0.9.20"